@@ -636,8 +636,16 @@ parameter_list|,
 name|String
 name|asyncId
 parameter_list|,
-name|boolean
-name|persistIndex
+name|Boolean
+name|indexToPersist
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|collectionProperties
 parameter_list|)
 throws|throws
 name|Exception
@@ -680,22 +688,45 @@ argument_list|,
 name|configName
 argument_list|)
 expr_stmt|;
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|collectionProperties
+specifier|final
+name|boolean
+name|persistIndex
 init|=
+operator|(
+name|indexToPersist
+operator|!=
+literal|null
+condition|?
+name|indexToPersist
+operator|.
+name|booleanValue
+argument_list|()
+else|:
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+operator|)
+decl_stmt|;
+if|if
+condition|(
+name|collectionProperties
+operator|==
+literal|null
+condition|)
+block|{
+name|collectionProperties
+operator|=
 operator|new
 name|HashMap
 argument_list|<>
 argument_list|()
-decl_stmt|;
+expr_stmt|;
+block|}
 name|collectionProperties
 operator|.
-name|put
+name|putIfAbsent
 argument_list|(
 name|CoreDescriptor
 operator|.
@@ -706,7 +737,7 @@ argument_list|)
 expr_stmt|;
 name|collectionProperties
 operator|.
-name|put
+name|putIfAbsent
 argument_list|(
 literal|"solr.tests.maxBufferedDocs"
 argument_list|,
@@ -715,7 +746,7 @@ argument_list|)
 expr_stmt|;
 name|collectionProperties
 operator|.
-name|put
+name|putIfAbsent
 argument_list|(
 literal|"solr.tests.ramBufferSizeMB"
 argument_list|,
@@ -725,7 +756,7 @@ expr_stmt|;
 comment|// use non-test classes so RandomizedRunner isn't necessary
 name|collectionProperties
 operator|.
-name|put
+name|putIfAbsent
 argument_list|(
 literal|"solr.tests.mergePolicy"
 argument_list|,
@@ -734,7 +765,7 @@ argument_list|)
 expr_stmt|;
 name|collectionProperties
 operator|.
-name|put
+name|putIfAbsent
 argument_list|(
 literal|"solr.tests.mergeScheduler"
 argument_list|,
@@ -743,7 +774,7 @@ argument_list|)
 expr_stmt|;
 name|collectionProperties
 operator|.
-name|put
+name|putIfAbsent
 argument_list|(
 literal|"solr.directoryFactory"
 argument_list|,
@@ -977,11 +1008,9 @@ literal|null
 argument_list|,
 name|asyncId
 argument_list|,
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
+literal|null
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 if|if
@@ -1466,11 +1495,9 @@ literal|null
 argument_list|,
 name|asyncId2
 argument_list|,
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
+literal|null
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 if|if
@@ -2036,11 +2063,9 @@ name|CREATE_NODE_SET_EMPTY
 argument_list|,
 name|asyncId
 argument_list|,
-name|random
-argument_list|()
-operator|.
-name|nextBoolean
-argument_list|()
+literal|null
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 if|if
@@ -2293,7 +2318,11 @@ literal|null
 argument_list|,
 literal|null
 argument_list|,
-literal|true
+name|Boolean
+operator|.
+name|TRUE
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 specifier|final
